[Add Report of Thorin]

--- a/Report_王淳_3220105023.md
+++ b/Report_王淳_3220105023.md
@@ -465,6 +465,72 @@ void CLOCKReplacer::Unpin(frame_id_t frame_id) {
 }
 ```
 
+#### TEST
+
+
+
+```cpp
+TEST(CLOCKReplacerTest, SampleTest) {
+    CLOCKReplacer clock_replacer(7);
+
+    // Scenario: unpin six elements, i.e. add them to the replacer.
+    clock_replacer.Unpin(1);
+    clock_replacer.Unpin(2);
+    clock_replacer.Unpin(3);
+    clock_replacer.Unpin(4);
+    clock_replacer.Unpin(5);
+    clock_replacer.Unpin(6);
+    clock_replacer.Unpin(1);
+    EXPECT_EQ(6, clock_replacer.Size());
+
+    // Scenario: get three victims from the lru.
+    int value;
+    clock_replacer.Victim(&value);
+    EXPECT_EQ(1, value);
+    clock_replacer.Victim(&value);
+    EXPECT_EQ(2, value);
+    clock_replacer.Victim(&value);
+    EXPECT_EQ(3, value);
+
+    // Scenario: pin elements in the replacer.
+    // Note that 3 has already been victimized, so pinning 3 should have no effect.
+    clock_replacer.Pin(3);
+    clock_replacer.Pin(4);
+    EXPECT_EQ(2, clock_replacer.Size());
+
+    // Scenario: unpin 4. We expect that the reference bit of 4 will be set to 1.
+    clock_replacer.Unpin(4);
+
+    // Scenario: continue looking for victims. We expect these victims.
+    clock_replacer.Victim(&value);
+    EXPECT_EQ(5, value);
+    clock_replacer.Victim(&value);
+    EXPECT_EQ(6, value);
+    clock_replacer.Victim(&value);
+    EXPECT_EQ(4, value);
+
+    CLOCKReplacer clock_replacer_new(5);
+    clock_replacer_new.Unpin(1);
+    clock_replacer_new.Unpin(3);
+    clock_replacer_new.Unpin(4);
+    clock_replacer_new.Unpin(2);
+    clock_replacer_new.Unpin(5);
+    clock_replacer_new.Unpin(6);
+    clock_replacer_new.Unpin(3);
+    clock_replacer_new.Unpin(4);
+    clock_replacer_new.Unpin(7);
+
+    clock_replacer_new.Victim(&value);
+    EXPECT_EQ(5, value);
+    clock_replacer_new.Victim(&value);
+    EXPECT_EQ(6, value);
+    clock_replacer_new.Victim(&value);
+    EXPECT_EQ(3, value);
+}
+```
+
+
+
 ### 缓冲池管理
 
 - `BufferPoolManager`类实现了一个缓冲池管理器，用于管理数据库页的加载、缓存和替换。该类提供了从磁盘加载页到内存缓冲池、将脏页写回磁盘、分配新页以及删除页的功能。
@@ -675,29 +741,25 @@ Catalog Manager 负责管理和维护数据库的所有模式信息，包括：
 
 CatalogMeta 类负责管理数据库中表和索引的元数据。以下是其结构和关键方法的概述：
 
-字段：
+- table_meta_pages_：存储表 ID 和对应元数据页 ID 之间的映射关系的 map。_
+- _index_meta_pages_：存储索引 ID 和对应元数据页 ID 之间的映射关系的 map。
+  方法。
+- `SerializeTo(char *buf) const`：将 `CatalogMeta` 对象序列化为字符缓冲区
+- `DeserializeFrom(char *buf)`：将字符缓冲区反序列化为 `CatalogMeta` 对象。
+- `GetSerializedSize() const`：计算序列化后的 `CatalogMeta` 对象的大小。
+- `GetNextTableId() const`：返回下一个可用的表 ID。
+- `GetNextIndexId() const`：返回下一个可用的索引 ID。
+- `NewInstance()`：创建 `CatalogMeta` 的新实例。
+- `GetTableMetaPages()`：返回指向存储表元数据页面的映射的指针（用于测试）。
+- `GetIndexMetaPages()`：返回指向存储索引元数据页面的映射的指针（用于测试）。
+- `DeleteIndexMetaPage(BufferPoolManager *bpm, index_id_t index_id)`：删除与给定索引 ID 相关联的元数据页。
 
-table_meta_pages_：存储表 ID 和对应元数据页 ID 之间的映射关系的 map。
-index_meta_pages_：存储索引 ID 和对应元数据页 ID 之间的映射关系的 map。
-方法：
-
-SerializeTo(char *buf) const：将 CatalogMeta 对象序列化为字符缓冲区。
-DeserializeFrom(char *buf)：将字符缓冲区反序列化为 CatalogMeta 对象。
-GetSerializedSize() const：计算序列化后的 CatalogMeta 对象的大小。
-GetNextTableId() const：返回下一个可用的表 ID。
-GetNextIndexId() const：返回下一个可用的索引 ID。
-NewInstance()：创建 CatalogMeta 的新实例。
-GetTableMetaPages()：返回指向存储表元数据页面的映射的指针（用于测试）。
-GetIndexMetaPages()：返回指向存储索引元数据页面的映射的指针（用于测试）。
 DeleteIndexMetaPage(BufferPoolManager *bpm, index_id_t index_id)：删除与给定索引 ID 相关联的元数据页。
 该类与 CatalogManager 密切相关，CatalogManager 使用 CatalogMeta 来管理数据库系统中表和索引的元数据。它提供了维护数据库系统中表和索引目录的必要功能。
 
 GetSerializedSize() 方法用于计算 CatalogMeta 对象序列化后的大小。根据给出的计算方法，该方法返回的值为：
 
-一个固定大小的魔术数字（uint32_t，4 个字节）。
-两个 std::map 对象的大小：每个 std::map 包括键值对，每个键值对需要 8 个字节（4 个字节的键和 4 个字节的值）。
-因此，加上魔术数字，总共为 12 个字节。然后将每个 std::map 中的键值对数量相加，乘以 8，得到的值表示这些键值对的总大小。
-这样就得到了 CatalogMeta 对象序列化后的总大小。
+- 一个固定大小的魔术数字（uint32_t，4 个字节）。两个 std::map 对象的大小：每个 std::map 包括键值对，每个键值对需要 8 个字节（4 个字节的键和 4 个字节的值）。因此，加上魔术数字，总共为 12 个字节。然后将每个 std::map 中的键值对数量相加，乘以 8，得到的值表示这些键值对的总大小。这样就得到了CatalogMeta 对象序列化后的总大小。
 
 
 ```cpp
@@ -711,32 +773,37 @@ uint32_t CatalogMeta::GetSerializedSize() const {
 
 IndexMetadata 类用于表示索引的元数据，包括索引的 ID、名称、所属表的 ID 以及索引键的映射。以下是该类的关键结构和方法：
 
-字段：
+- index_id_：索引的唯一标识符。index_name_：索引的名称。
 
-index_id_：索引的唯一标识符。
-index_name_：索引的名称。
-table_id_：该索引所属表的唯一标识符。
-key_map_：索引键与元组键的映射。
-方法：
+- table_i_：该索引所属表的唯一标识符。_
 
-Create()：静态方法，用于创建新的 IndexMetadata 实例。
-SerializeTo(char *buf) const：将 IndexMetadata 对象序列化为字符缓冲区。
-GetSerializedSize() const：计算序列化后的 IndexMetadata 对象的大小。
-DeserializeFrom(char *buf, IndexMetadata *&index_meta)：从字符缓冲区反序列化出一个 IndexMetadata 对象。
-GetIndexName() const：返回索引的名称。
-GetTableId() const：返回索引所属表的唯一标识符。
-GetIndexColumnCount() const：返回索引的列数。
-GetKeyMapping() const：返回索引键与元组键的映射。
-GetIndexId() const：返回索引的唯一标识符。
+- _key_map_：索引键与元组键的映射。
+  方法：。
+
+- `Create()`：静态方法，用于创建新的 `IndexMetadata` 实例。
+
+  `SerializeTo(char *buf) const`：将 `IndexMetadata` 对象序列化为字符缓冲区。
+
+  `GetSerializedSize() const`：计算序列化后的 `IndexMetadata` 对象的大小。
+
+  `DeserializeFrom(char *buf, IndexMetadata *&index_meta)`：从字符缓冲区反序列化出一个 `IndexMetadata` 对象。
+
+  `GetIndexName() const`：返回索引的名称。
+
+  `GetTableId() const`：返回索引所属表的唯一标识符。
+
+  `GetIndexColumnCount() const`：返回索引的列数。
+
+  `GetKeyMapping() const`：返回索引键与元组键的映射。
+
+  `GetIndexId() const`：返回索引的唯一标识符。
+
 该类主要用于管理数据库中索引的元数据信息，为索引的创建、序列化和反序列化提供了必要的功能。
 
 
 GetSerializedSize() 方法用于计算 IndexMetadata 对象序列化后的大小。根据给出的计算方法，该方法返回的值为索引名称长度加上键映射大小以及其他固定大小的总和。具体计算如下：
 
-每个键映射使用 4 个字节（假设 uint32_t 类型）。
-索引名称的长度由 index_name_.length() 给出。
-加上其他固定大小的部分，其中包括键映射大小（4 个字节）、索引 ID（2 个字节）、表 ID（2 个字节）和魔术数字（2 个字节）。
-因此，将以上各项大小相加即可得到 IndexMetadata 对象序列化后的总大小。
+每个键映射使用 4 个字节（假设 uint32_t 类型）。索引名称的长度由 index_name_.length() 给出。加上其他固定大小的部分，其中包括键映射大小（4 个字节）、索引 ID（2 个字节）、表 ID（2 个字节）和魔术数字（2 个字节）。因此，将以上各项大小相加即可得到 IndexMetadata 对象序列化后的总大小。
 
 ```cpp
 uint32_t IndexMetadata::GetSerializedSize() const {
@@ -746,42 +813,52 @@ return 4 * (key_map_.size() + 5) + index_name_.length();
 }
 ```
 
-#### TableMetadata
+#### IndexInfo
 
+`Init` 方法用于初始化 `IndexInfo` 对象。具体步骤如下：
+
+1. **初始化元数据和表信息**：将传入的元数据和表信息指针赋值给类成员变量。
+2. **映射索引键到键模式**：使用 `Schema::ShallowCopySchema` 方法根据表的模式和索引键的映射关系创建索引键模式。
+3. **创建索引**：调用 `CreateIndex` 方法创建索引。`CreateIndex` 方法需要根据索引类型（例如 "bptree"）和缓冲池管理器来创建索引对象。
+
+```cpp
+  void Init(IndexMetadata *meta_data, TableInfo *table_info, BufferPoolManager *buffer_pool_manager) {
+    // Step1: init index metadata and table info
+    meta_data_ = meta_data;
+    table_info_ = table_info;
+    // Step2: mapping index key to key schema
+    key_schema_ = Schema::ShallowCopySchema(table_info_->GetSchema(), meta_data_->GetKeyMapping());
+    // Step3: call CreateIndex to create the index
+    index_ = CreateIndex(buffer_pool_manager,"bptree");
+    //ASSERT(false, "Not Implemented yet.");
+  }
+```
+
+`IndexInfo` 类的主要职责是：初始化索引元数据。映射索引键到键模式。创建索引。提供一些索引相关的信息访问方法。
+
+#### TableMetadata
 
 TableMetadata 类用于存储表的元数据，包括表的ID、名称、根页面ID以及表的模式（通过指向 Schema 对象的指针来表示）。以下是对该类的分析：
 
-成员变量：
-table_id_：表的唯一标识符，类型为 table_id_t。
-table_name_：表的名称，类型为 std::string。
-root_page_id_：表的根页面ID，用于指示存储表数据的位置，类型为 page_id_t。
-schema_：指向 Schema 对象的指针，表示表的模式。
-构造函数：
-私有构造函数用于创建 TableMetadata 对象。只有 Create 静态方法可以调用该构造函数，确保了对象的创建通过 Create 方法进行，从而遵循对象创建的最佳实践，并控制了对象的生命周期。
-静态方法：
-Create：用于创建新的 TableMetadata 对象，需要提供表的ID、名称、根页面ID以及表的模式。
-DeserializeFrom：用于从缓冲区中反序列化数据，创建 TableMetadata 对象。该方法通常用于从磁盘中读取表的元数据并恢复对象。
-实例方法：
-SerializeTo：将对象序列化为字符数组。该方法通常用于将表的元数据写入磁盘。
-GetSerializedSize：计算对象序列化后的大小，包括固定大小的头部信息和动态大小的成员变量（如表名的长度和模式的大小）。
-GetTableId：获取表的ID。
-GetTableName：获取表的名称。
-GetFirstPageId：获取表的根页面ID。
-GetSchema：获取表的模式对象。
-其他特性：
-使用了友元类 TableInfo，允许 TableInfo 类访问 TableMetadata 类的私有成员。
-类中包含了一个固定的魔术数字，用于标识序列化的对象类型。
-由于可能需要在对象销毁时释放 Schema 对象的内存，因此在实际使用中可能需要实现析构函数，但在提供的代码中被注释掉了。
-总体而言，TableMetadata 类提供了对表元数据的封装和管理，为数据库系统的元数据管理提供了基本的功能支持。
+- table_id_：表的唯一标识符，类型为 table_id_t。_
+- _table_name_：表的名称，类型为 std::string。
+- root_page_id_：表的根页面ID，用于指示存储表数据的位置，类型为 page_id_t。_
+- _schema_：指向 Schema 对象的指针，表示表的模式。
+- `Create`：用于创建新的 `TableMetadata` 对象，需要提供表的ID、名称、根页面ID以及表的模式。
+- `DeserializeFrom`：用于从缓冲区中反序列化数据，创建 `TableMetadata` 对象。该方法通常用于从磁盘中读取表的元数据并恢复对象。
+
+- `SerializeTo`：将对象序列化为字符数组。该方法通常用于将表的元数据写入磁盘。
+- `GetSerializedSize`：计算对象序列化后的大小，包括固定大小的头部信息和动态大小的成员变量（如表名的长度和模式的大小）。
+- `GetTableId`：获取表的ID。
+- `GetTableName`：获取表的名称。
+- `GetFirstPageId`：获取表的根页面ID。
+- `GetSchema`：获取表的模式对象。
+
+使用了友元类 TableInfo，允许 TableInfo 类访问 TableMetadata 类的私有成员。类中包含了一个固定的魔术数字，用于标识序列化的对象类型。由于可能需要在对象销毁时释放 Schema 对象的内存，因此在实际使用中可能需要实现析构函数，但在提供的代码中被注释掉了。总体而言，TableMetadata 类提供了对表元数据的封装和管理，为数据库系统的元数据管理提供了基本的功能支持。
 
 TableMetadata 类中的 GetSerializedSize() 方法用于计算序列化后对象的大小。根据该方法的实现和类的成员变量，计算得到的大小如下：
 
-一个固定大小的魔术数字（uint32_t，4 个字节）。
-一个 table_id_t 类型的表ID（4 个字节）。
-一个字符串类型的表名，其大小等于字符串长度加上一个结尾的 null 字符（字符串长度 + 1）。
-一个 page_id_t 类型的根页面ID（4 个字节）。
-一个指向 Schema 对象的指针（通常是指针的大小，例如 4 或 8 个字节，取决于操作系统和编译器）。
-根据上述计算，将这些部分的大小相加即可得到 TableMetadata 对象序列化后的总大小。
+- 一个固定大小的魔术数字（uint32_t，4 个字节）。一个 table_id_t 类型的表ID（4 个字节）。一个字符串类型的表名，其大小等于字符串长度加上一个结尾的 null 字符（字符串长度 + 1）。一个 page_id_t 类型的根页面ID（4 个字节）。一个指向 Schema 对象的指针（通常是指针的大小，例如 4 或 8 个字节，取决于操作系统和编译器）。根据上述计算，将这些部分的大小相加即可得到 TableMetadata 对象序列化后的总大小。
 
 
 ```cpp
@@ -793,161 +870,11 @@ uint32_t TableMetadata::GetSerializedSize() const {
 
 ### 表和索引的管理
 
-CatalogManager::CreateTable
+#### CreateTable
 
-功能描述：创建新表，分配所需资源，并将新表的元数据信息序列化到磁盘。
-参数：table_name 表名称，schema 表模式，txn 事务对象，table_info 新创建的表信息。
-实现细节：
-检查表是否已存在。
-创建新的表信息实例、表模式的深拷贝、表堆、表元数据。
-将表元数据序列化到新页并刷新到磁盘。
-更新表名映射、表信息、表元数据页映射。
-返回成功或失败。
-CatalogManager::GetTable
-
-功能描述：获取指定名称的表信息。
-参数：table_name 表名称，table_info 输出参数，存储获取的表信息。
-实现细节：
-根据表名查找表名映射，获取表的 ID。
-使用表的 ID 查找表信息，并存储到输出参数中。
-返回成功或失败。
-CatalogManager::GetTables
-
-功能描述：获取所有表的信息。
-参数：tables 输出参数，存储获取的所有表信息。
-实现细节：
-遍历表名映射，根据表的 ID 获取表信息，并存储到输出参数中。
-返回成功或失败。
-CatalogManager::CreateIndex
-
-功能描述：为指定表创建索引。
-参数：table_name 表名称，index_name 索引名称，index_keys 索引键，txn 事务对象，index_info 输出参数，存储创建的索引信息。
-实现细节：
-检查表是否存在，检查索引名称是否已被占用。
-获取表的 ID 和信息，初始化键映射。
-创建索引元数据、序列化到新页并刷新到磁盘。
-初始化索引信息，并更新索引名称映射、索引信息、索引元数据页映射。
-返回成功或失败。
-CatalogManager::GetIndex
-
-功能描述：获取指定表的指定索
-继续
-ChatGPT
-引的信息。
-
-参数：table_name 表名称，index_name 索引名称，index_info 输出参数，存储获取的索引信息。
-实现细节：
-检查表是否存在，检查索引是否存在。
-根据表名和索引名获取索引 ID。
-使用索引 ID 查找索引信息，并存储到输出参数中。
-返回成功或失败。
-CatalogManager::GetTableIndexes
-
-功能描述：获取指定表的所有索引信息。
-参数：table_name 表名称，indexes 输出参数，存储获取的所有索引信息。
-实现细节：
-检查表是否存在。
-根据表名获取该表的所有索引 ID。
-遍历索引 ID，根据索引 ID 获取索引信息，并存储到输出参数中。
-返回成功或失败。
-CatalogManager::DropTable
-
-功能描述：删除指定表及其关联的所有索引。
-参数：table_name 表名称。
-实现细节：
-检查表是否存在。
-获取表的 ID 和信息。
-获取表中的所有索引，逐个删除。
-删除表的元数据页。
-更新表名映射、索引名称映射，刷新目录元数据页。
-返回成功或失败。
-CatalogManager::DropIndex
-
-功能描述：删除指定表的指定索引。
-参数：table_name 表名称，index_name 索引名称。
-实现细节：
-检查表和索引是否存在。
-获取索引 ID 和信息。
-销毁索引，删除索引的元数据页。
-更新索引名称映射，刷新目录元数据页。
-返回成功或失败。
-CatalogManager::FlushCatalogMetaPage
-
-功能描述：将目录元数据页中的 catalog_meta_ 对象序列化到磁盘。
-参数：无。
-实现细节：
-序列化 catalog_meta_ 到缓冲池管理器获取的页数据中。
-取消页的固定，并将其标记为脏页。
-将页刷新到磁盘。
-返回成功或失败。
-CatalogManager::LoadTable
-
-功能描述：从元数据页加载表信息。
-参数：table_id 表 ID，page_id 表元数据页 ID。
-实现细节：
-创建 TableInfo 对象。
-反序列化表元数据，并创建 TableHeap 对象。
-初始化 TableInfo 对象，并更新表名映射、表信息。
-返回成功或失败。
-CatalogManager::LoadIndex
-
-功能描述：从元数据页加载索引信息。
-参数：index_id 索引 ID，page_id 索引元数据页 ID。
-实现细节：
-创建 IndexInfo 对象。
-反序列化索引元数据，并初始化 IndexInfo 对象。
-更新索引名称映射、索引信息。
-返回成功或失败。
-CatalogManager::GetTable
-
-功能描述：根据表 ID 获取表信息。
-参数：table_id 表 ID，table_info 输出参数，存储获取的表信息。
-实现细节：
-根据表 ID 获取表信息，并存储到输出参数中。
-返回成功或失败。
+功能描述：创建新表，分配所需资源，并将新表的元数据信息序列化到磁盘。检查表是否已存在。创建新的表信息实例、表模式的深拷贝、表堆、表元数据。将表元数据序列化到新页并刷新到磁盘。更新表名映射、表信息、表元数据页映射。返回成功或失败。
 
 ```cpp
-
-/**
- * TODO: Student Implement
- */
-CatalogManager::CatalogManager(BufferPoolManager *buffer_pool_manager, LockManager *lock_manager,
-                               LogManager *log_manager, bool init)
-    : buffer_pool_manager_(buffer_pool_manager), lock_manager_(lock_manager), log_manager_(log_manager) {
-  // 第一次生成数据库
-  if (init) catalog_meta_ = CatalogMeta::NewInstance();
-  else {
-    // 读取 meta_page 的信息
-    catalog_meta_ = CatalogMeta::DeserializeFrom(buffer_pool_manager_->FetchPage(CATALOG_META_PAGE_ID)->GetData());
-    buffer_pool_manager_->UnpinPage(CATALOG_META_PAGE_ID, false);
-    // 获取 table_meta
-    for (auto iter: catalog_meta_->table_meta_pages_) {
-      LoadTable(iter.first, iter.second);
-    }
-    // 获取 index_meta
-    for (auto iter: catalog_meta_->index_meta_pages_) {
-      LoadIndex(iter.first, iter.second);
-    }
-  }
-  next_index_id_ = catalog_meta_->GetNextIndexId();
-  next_table_id_ = catalog_meta_->GetNextTableId();
-  FlushCatalogMetaPage();
-}
-
-CatalogManager::~CatalogManager() {
-   FlushCatalogMetaPage();
-   delete catalog_meta_;
-   for (auto iter : tables_) {
-     delete iter.second;
-   }
-   for (auto iter : indexes_) {
-     delete iter.second;
-   }
-}
-
-/**
- * TODO: Student Implement
- */
 dberr_t CatalogManager::CreateTable(const string &table_name, TableSchema *schema,
                                     Txn *txn, TableInfo *&table_info) {
   // 已经存在同名表
@@ -979,11 +906,15 @@ dberr_t CatalogManager::CreateTable(const string &table_name, TableSchema *schem
   FlushCatalogMetaPage();  // 刷新目录元数据页面
   return DB_SUCCESS;  // 返回成功
 }
+```
 
 
-/**
- * TODO: Student Implement
- */
+
+#### GetTable
+
+获取指定名称的表信息。根据表名查找表名映射，获取表的 ID。使用表的 ID 查找表信息，并存储到输出参数中。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::GetTable(const string &table_name, TableInfo *&table_info) {
   auto itr = table_names_.find(table_name);
   if(itr == table_names_.end()) {
@@ -993,10 +924,17 @@ dberr_t CatalogManager::GetTable(const string &table_name, TableInfo *&table_inf
   table_info = tables_[itr->second];// 对应 id_t 存在 table
   return DB_SUCCESS;
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+#### GetTables
+
+获取所有表的信息。遍历表名映射，根据表的 ID 获取表信息，并存储到输出参数中。返回成功或失败。
+
+
+
+```cpp
 dberr_t CatalogManager::GetTables(vector<TableInfo *> &tables) const {
   if (tables_.empty()) return DB_FAILED;
   for(auto itr = table_names_.begin(); itr != table_names_.end(); itr++) {
@@ -1004,10 +942,18 @@ dberr_t CatalogManager::GetTables(vector<TableInfo *> &tables) const {
   }
   return DB_SUCCESS;
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+#### CreateIndex
+
+为指定表创建索引。检查表是否存在，检查索引名称是否已被占用。获取表的 ID 和信息，初始化键映射。
+创建索引元数据、序列化到新页并刷新到磁盘。初始化索引信息，并更新索引名称映射、索引信息、索引元数据页映射。返回成功或失败。
+
+
+
+```cpp
 dberr_t CatalogManager::CreateIndex(const std::string &table_name, const string &index_name,
                                     const std::vector<std::string> &index_keys, Txn *txn,
                                     IndexInfo *&index_info, const string &index_type) {
@@ -1070,10 +1016,15 @@ dberr_t CatalogManager::CreateIndex(const std::string &table_name, const string 
   FlushCatalogMetaPage();
   return DB_SUCCESS; // 创建索引成功，返回成功码
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+#### GetIndex
+
+获取指定表的指定索引的信息。检查表是否存在，检查索引是否存在。根据表名和索引名获取索引 ID。使用索引 ID 查找索引信息，并存储到输出参数中。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::GetIndex(const std::string &table_name, const std::string &index_name,
                                  IndexInfo *&index_info) const {
   // 检查表是否存在
@@ -1088,10 +1039,15 @@ dberr_t CatalogManager::GetIndex(const std::string &table_name, const std::strin
   index_info = indexes_.find(index_id)->second;
   return DB_SUCCESS; // 获取索引成功，返回成功码
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+#### GetTableIndexes
+
+获取指定表的所有索引信息。检查表是否存在。根据表名获取该表的所有索引 ID。遍历索引 ID，根据索引 ID 获取索引信息，并存储到输出参数中。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::GetTableIndexes(const std::string &table_name, std::vector<IndexInfo *> &indexes) const {
 
   // 检查表是否存在
@@ -1106,10 +1062,17 @@ dberr_t CatalogManager::GetTableIndexes(const std::string &table_name, std::vect
 
   return DB_SUCCESS; // 获取索引成功，返回成功码
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+
+
+#### DropTable
+
+删除指定表及其关联的所有索引。检查表是否存在。获取表的 ID 和信息。获取表中的所有索引，逐个删除。删除表的元数据页。更新表名映射、索引名称映射，刷新目录元数据页。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::DropTable(const string &table_name) {
 
   // 检查表是否存在
@@ -1142,12 +1105,19 @@ dberr_t CatalogManager::DropTable(const string &table_name) {
   FlushCatalogMetaPage();
   return DB_SUCCESS; // 表删除成功，返回成功码
 }
+```
 
 
-/**
- * TODO: Student Implement
- */
 
+
+
+#### DropIndex
+
+删除指定表的指定索引。检查表和索引是否存在。获取索引 ID 和信息。销毁索引，删除索引的元数据页。更新索引名称映射，刷新目录元数据页。返回成功或失败。
+
+
+
+```cpp
 dberr_t CatalogManager::DropIndex(const string &table_name, const string &index_name) {
   // 检查指定的表是否存在
   if (index_names_.count(table_name) == 0) return DB_TABLE_NOT_EXIST;
@@ -1179,10 +1149,18 @@ dberr_t CatalogManager::DropIndex(const string &table_name, const string &index_
 
   return DB_SUCCESS;
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+
+
+#### FlushCatalogMetaPage
+
+将目录元数据页中的 catalog_meta_ 对象序列化到磁盘。序列化 catalog_meta_ 到缓冲池管理器获取的页数据中。
+取消页的固定，并将其标记为脏页。将页刷新到磁盘。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::FlushCatalogMetaPage() const {
   // 将 catalog_meta_ 序列化到缓冲池管理器获取的页数据中
   catalog_meta_->SerializeTo(buffer_pool_manager_->FetchPage(CATALOG_META_PAGE_ID)->GetData());
@@ -1192,10 +1170,17 @@ dberr_t CatalogManager::FlushCatalogMetaPage() const {
   buffer_pool_manager_->FlushPage(CATALOG_META_PAGE_ID);
   return DB_SUCCESS;
 }
+```
 
-/**
- * TODO: Student Implement
- */
+
+
+
+
+#### LoadTable
+
+从元数据页加载表信息。创建 TableInfo 对象。反序列化表元数据，并创建 TableHeap 对象。初始化 TableInfo 对象，并更新表名映射、表信息。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::LoadTable(const table_id_t table_id, const page_id_t page_id) {
   TableInfo *table_info = TableInfo::Create(); // 创建TableInfo对象
   // 反序列化
@@ -1214,11 +1199,17 @@ dberr_t CatalogManager::LoadTable(const table_id_t table_id, const page_id_t pag
   tables_.insert(pair<table_id_t, TableInfo *>(table_id, table_info)); // 将table_id和table_info插入到tables_中
   return DB_SUCCESS;
 }
+```
 
 
-/**
- * TODO: Student Implement
- */
+
+
+
+#### LoadIndex
+
+从元数据页加载索引信息。参数：index_id 索引 ID，page_id 索引元数据页 ID。创建 IndexInfo 对象。反序列化索引元数据，并初始化 IndexInfo 对象。更新索引名称映射、索引信息。返回成功或失败。
+
+```cpp
 dberr_t CatalogManager::LoadIndex(const index_id_t index_id, const page_id_t page_id) {
   IndexInfo *index_info = IndexInfo::Create(); // 创建IndexInfo对象
   // Deserialize
@@ -1238,16 +1229,48 @@ dberr_t CatalogManager::LoadIndex(const index_id_t index_id, const page_id_t pag
                                                                        map_index_id)); // 将表名和map_index_id插入到index_names_中
   return DB_SUCCESS;
 }
+```
 
-/**
- * TODO: Student Implement
- */
 
+
+
+
+#### GetTable
+
+根据表 ID 获取表信息。根据表 ID 获取表信息，并存储到输出参数中。返回成功或失败。
+
+``` cpp
 dberr_t CatalogManager::GetTable(const table_id_t table_id, TableInfo *&table_info) {
   auto iter = tables_.find(table_id);
   if (iter == tables_.end()) return DB_TABLE_NOT_EXIST;
   table_info = iter->second;
   return DB_SUCCESS;
 }
+```
 
+
+
+```cpp
+CatalogManager::CatalogManager(BufferPoolManager *buffer_pool_manager, LockManager *lock_manager,
+                               LogManager *log_manager, bool init)
+    : buffer_pool_manager_(buffer_pool_manager), lock_manager_(lock_manager), log_manager_(log_manager) {
+  // 第一次生成数据库
+  if (init) catalog_meta_ = CatalogMeta::NewInstance();
+  else {
+    // 读取 meta_page 的信息
+    catalog_meta_ = CatalogMeta::DeserializeFrom(buffer_pool_manager_->FetchPage(CATALOG_META_PAGE_ID)->GetData());
+    buffer_pool_manager_->UnpinPage(CATALOG_META_PAGE_ID, false);
+    // 获取 table_meta
+    for (auto iter: catalog_meta_->table_meta_pages_) {
+      LoadTable(iter.first, iter.second);
+    }
+    // 获取 index_meta
+    for (auto iter: catalog_meta_->index_meta_pages_) {
+      LoadIndex(iter.first, iter.second);
+    }
+  }
+  next_index_id_ = catalog_meta_->GetNextIndexId();
+  next_table_id_ = catalog_meta_->GetNextTableId();
+  FlushCatalogMetaPage();
+}
 ```
